# krx-dashboard

./: .env.example  .gitignore  README.md
.github/workflows/: daily-collect.yml  deploy-pages.yml
data/: issuer_map.yaml
data/snapshots/: listing_20260306.json  listing_20260309.json  listing_20260310.json  listing_20260311.json  listing_20260312.json  listing_20260313.json  listing_20260316.json  listing_20260317.json  listing_20260318.json  listing_20260319.json  listing_20260320.json  listing_20260323.json  listing_20260324.json  listing_20260325.json  listing_20260326.json  listing_20260327.json  listing_20260330.json  listing_20260331.json  listing_20260401.json  listing_20260402.json  listing_20260403.json  listing_20260406.json  listing_20260407.json  listing_20260408.json  listing_20260409.json  listing_20260410.json  listing_20260413.json  listing_20260414.json  listing_20260415.json  listing_20260416.json  listing_20260417.json  listing_20260420.json  listing_20260421.json  listing_20260422.json  listing_20260423.json  listing_20260424.json  listing_20260427.json  listing_20260428.json  listing_20260429.json  listing_20260430.json  (+74 more)
pipeline/: README.md  pyproject.toml
pipeline/src/etf_monitor/: __init__.py  __main__.py  backfill.py  client.py  collect.py  config.py  demo.py  issuer.py  transform.py
pipeline/tests/: test_transform.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: latest.json  snapshot_20260528.json  snapshot_20260529.json  snapshot_20260601.json  (+37 more)
web/src/: App.tsx  api.ts  types.ts
(+14 files in other folders)
